# educasion_django

./:  README.md  .gitignore  pyproject.toml
mysite/: Makefile
mysite/education/: admin.py  forms.py  models.py  urls.py  views.py
mysite/education/management/commands/: show_examples.py
mysite/education/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options.py  0003_course_students_delete_studentsgroup.py  0004_lesson_course.py  0005_alter_lesson_course.py  0006_alter_category_options_alter_student_options_and_more.py  0007_alter_lesson_teacher.py  0008_childmodel_parentmodel_grandchildmodel_and_more.py  0009_remove_childmodel_parent_and_more.py  0010_alter_lessonfiles_options_alter_lesson_teacher.py  0011_alter_lesson_course.py  0012_alter_course_students_alter_lesson_course.py  0013_alter_course_students.py
mysite/education/templates/education/: course_confirm_delete.html  course_create.html  course_detail.html  course_list.html  course_update.html  create_course.html  index.html  index_course_detail.html  index_course_list.html  lesson_create.html  lesson_delete.html  lesson_detail.html  lesson_list.html  lesson_update.html  login.html  register.html  student_detail.html  student_list.html  teacher_detail.html  teacher_list.html
mysite/education/templatetags/: filters.py
mysite/mysite/: settings.py  urls.py
mysite/templates/: base.html
mysite/templates/include/: _create_lesson.html  _navbar.html
mysite/uploads/lessons/lessons_29/files/: ui.epub
